요구사항 반영 (컨텐츠 카테고리, 홈화면, 배너버그)

--- a/src/main/resources/templates/admin/content/pages/contents/create.html
+++ b/src/main/resources/templates/admin/content/pages/contents/create.html
@@ -40,8 +40,12 @@
 					<label class="form-label" for="category">카테고리 선택</label>
 					<select class="form-select" id="category" th:field="*{category}">
 						<option value="">카테고리</option>
-						<option value="전자기기">전자기기</option>
-						<option value="옷">옷</option>
+						<!--								편집샵 스토리, 패션, 레코즈, 소품, 리빙, 기타-->
+						<option value="편집샵 스토리">편집샵 스토리</option>
+						<option value="패션">패션</option>
+						<option value="레코드">레코드</option>
+						<option value="소품">소품</option>
+						<option value="리빙">리빙</option>
 						<option value="기타">기타</option>
 					</select>
 				</div>
