기본 관심사 수정

--- a/src/main/resources/templates/user/content/signup.html
+++ b/src/main/resources/templates/user/content/signup.html
@@ -192,7 +192,7 @@
 												id="interest"
 												class="form-control"
 												placeholder='관심사를 설정해주세요.'
-												value='옷'>
+												value='편집샵'>
 									</div>
 
 									<script>
