이미지 압축

--- a/src/main/resources/templates/user/content/pages/introduce.html
+++ b/src/main/resources/templates/user/content/pages/introduce.html
@@ -14,9 +14,9 @@
 	</div>-->
 
 	<script>
-        $(function () {
-            ScrollReveal().reveal('.section', {interval: 20, reset: true});
-        })
+        // $(function () {
+        //     ScrollReveal().reveal('.section', {interval: 50});
+        // })
 	</script>
 
 
@@ -44,16 +44,16 @@
 	</div>
 
 	<div class="section pt-0 pb_20">
-		<img src="/about/4.jpg" alt="about service" loading="lazy">
+		<img src="/about/4.jpg" alt="about service">
 	</div>
 
 
 	<div class="section pt-0 pb-0">
-		<img src="/about/5.jpg" alt="about service" loading="lazy">
+		<img src="/about/5.jpg" alt="about service">
 	</div>
 
 	<div class="section pt-0 pb_20 bg-black">
-		<img src="/about/6.jpg" alt="about service" loading="lazy">
+		<img src="/about/6.jpg" alt="about service">
 		<div class="container">
 			<div class="row">
 				<!--<div class="col-md-12 text-center text-white">
@@ -66,7 +66,7 @@
 				</div>
 			</div>
 		</div>
-		<img src="/about/7.jpg" alt="about service" loading="lazy">
+		<img src="/about/7.jpg" alt="about service">
 	</div>
 
 
