--- a/src/main/resources/templates/user/content/pages/shop-list.html
+++ b/src/main/resources/templates/user/content/pages/shop-list.html
@@ -151,7 +151,7 @@
                 width: 25vw;
                 max-width: 450px;
 
-                opacity: 0.9122;
+                /*opacity: 0.9122;*/
             }
 
             #shopDetail {
