이미지 리사이징 구현

--- a/src/main/resources/templates/user/content/main.html
+++ b/src/main/resources/templates/user/content/main.html
@@ -163,7 +163,7 @@
 
 					<div class="card hover-big circle-top" th:each="feed: ${story_category}">
 						<div class="img-container43">
-							<img th:src="'/file/' + *{feed.getThumbnailFileName()}" class="card-img-top circle-top"
+							<img th:src="'/thumb/' + *{feed.getThumbnailFileName()}" class="card-img-top circle-top"
 							     alt="피드 썸네일 이미지" loading=lazy>
 						</div>
 						<div class="card-body" data-same-height='true'>
@@ -201,7 +201,7 @@
 
 					<div class="card hover-big" th:each="feed: ${fashion_category}">
 						<div class="img-container43">
-							<img th:src="'/file/' + *{feed.getThumbnailFileName()}" class="card-img-top"
+							<img th:src="'/thumb/' + *{feed.getThumbnailFileName()}" class="card-img-top"
 							     alt="피드 썸네일 이미지" loading=lazy>
 						</div>
 						<div class="card-body" data-same-height='true'>
@@ -240,7 +240,7 @@
 
 					<div class="card hover-big circle-top" th:each="feed: ${record_category}">
 						<div class="img-container43">
-							<img th:src="'/file/' + *{feed.getThumbnailFileName()}" class="card-img-top circle-top"
+							<img th:src="'/thumb/' + *{feed.getThumbnailFileName()}" class="card-img-top circle-top"
 							     alt="피드 썸네일 이미지" loading=lazy>
 						</div>
 						<div class="card-body" data-same-height='true'>
@@ -279,7 +279,7 @@
 
 					<div class="card hover-big circle-top" th:each="feed: ${goods_category}">
 						<div class="img-container43">
-							<img th:src="'/file/' + *{feed.getThumbnailFileName()}" class="card-img-top circle-top"
+							<img th:src="'/thumb/' + *{feed.getThumbnailFileName()}" class="card-img-top circle-top"
 							     alt="피드 썸네일 이미지" loading=lazy>
 						</div>
 						<div class="card-body" data-same-height='true'>
@@ -317,7 +317,7 @@
 
 					<div class="card hover-big circle-top" th:each="feed: ${record_category}">
 						<div class="img-container43">
-							<img th:src="'/file/' + *{feed.getThumbnailFileName()}" class="card-img-top circle-top"
+							<img th:src="'/thumb/' + *{feed.getThumbnailFileName()}" class="card-img-top circle-top"
 							     alt="피드 썸네일 이미지" loading=lazy>
 						</div>
 						<div class="card-body" data-same-height='true'>
