--- a/src/main/resources/templates/user/fragments/head.html
+++ b/src/main/resources/templates/user/fragments/head.html
@@ -26,6 +26,11 @@
 	      content="SHIFT3에서 뉴스피드를 기반으로 현명한 쇼핑을 하세요.">
 	<meta name="keywords"
 	      content="select shop, feed shop, street brand, hiphop brand">
+	
+	<meta property="og:title" content="SHIFT3">
+	<meta property="og:description"
+	      content="이 세상 모든 스토어를 연결하다">
+	<meta property="og:image" content="https://shift3.co.kr/about/1.jpg">
 
 	<!-- SITE TITLE -->
 	<title>SHIFT3 - 이 세상 모든 스토어를 연결하다</title>
