--- a/src/main/resources/templates/admin/content/pages/shop/create.html
+++ b/src/main/resources/templates/admin/content/pages/shop/create.html
@@ -293,6 +293,8 @@
 					<div class="d-flex justify-content-between">
 						<input type="file" id="file-input" hidden>
 						<button class="btn btn-primary" id="upload-btn" type="button">이미지 업로드</button>
+						<span class="text-danger">* 이미지가 자동 압축되어 올라가기 때문에, 업로드 시간이 다소 소요될 수 있습니다.</span>
+
 					</div>
 					<div id="image-preview">
 						<div class="image-preview" th:each="image : *{imageList}" th:data-image-id="${image.getId()}">
