--- a/src/main/resources/templates/user/content/pages/my-page/dips.html
+++ b/src/main/resources/templates/user/content/pages/my-page/dips.html
@@ -143,7 +143,7 @@
                         ele.innerHTML = `
                         <div style="height: 0; padding-bottom: 100%; position: relative;" class="hover-small">
                             <a href="/shop-detail/${shop.id}" target="_blank">
-                                <img src="/file/${imageUrl}" class="img-fluid h-100 w-100 position-absolute" alt="${shop.name}" style="object-fit: cover;">
+                                <img src="/thumb/${imageUrl}" class="img-fluid h-100 w-100 position-absolute" alt="${shop.name}" style="object-fit: cover;">
                             </a>
                         </div>
                         <span>
